--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,23 +4,56 @@ on:
   push:
     branches: [main, master]
   pull_request:
+    branches: [main, master]
 
 jobs:
-  build-test:
+  build-and-test:
     runs-on: ubuntu-latest
+    env:
+      NUXT_TELEMETRY_DISABLED: "1"
+      NODE_OPTIONS: "--max-old-space-size=4096"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Use Node
+
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
-      - name: Install
+          cache-dependency-path: creativity-kits/package-lock.json
+
+      - name: Install deps
+        working-directory: creativity-kits
         run: npm ci
+
       - name: Lint
+        working-directory: creativity-kits
         run: npm run lint
-      - name: Test
-        run: npm test
-      - name: Build
+
+      - name: Unit tests (Vitest)
+        working-directory: creativity-kits
+        run: npm run test
+
+      - name: Build (Nuxt)
+        working-directory: creativity-kits
         run: npm run build
+
+      - name: Install Playwright Browsers
+        working-directory: creativity-kits
+        run: npx -y playwright install --with-deps
+
+      - name: E2E tests (Playwright)
+        working-directory: creativity-kits
+        env:
+          CI: true
+        run: npx -y playwright test
+
+      - name: Upload Playwright HTML Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: creativity-kits/playwright-report
+          retention-days: 7
