--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
+    "preview": "nuxt preview",
     "generate": "nuxt generate",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -22,7 +23,7 @@
     "@nuxtjs/tailwindcss": "^6.12.1",
     "dayjs": "^1.11.13",
     "nanoid": "^5.1.6",
-    "nuxt": "^3.13.2",
+    "nuxt": "^4.1.2",
     "opencc-js": "^1.0.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
