--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nanoid": "^5.1.6",
     "nuxt": "^4.1.2",
     "opencc-js": "^1.0.5",
+    "pinyin-pro": "^3.27.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
