--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "playwright": "^1.48.2",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.93.2",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4",
     "vitest": "^2.1.2"
